--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,6 @@
-/* .first_title {
-    color: white;
-    background-color: #3a4981;
+.UAC_css {
     display: flex;
     justify-content: center;
+    width: 60%;
+    height: 60%;
 }
-
-.second_title {
-    color: #3a4981;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-} */
