--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,16 +1,13 @@
-.UAC_css {
-    display: flex;
-    justify-content: center;
-    width: 60%;
-    height: 60%;
+.back_colour {
+    background-color: #3a4981;
 }
 
-.sixpro {
+.six_pro {
     display: flex;
     /* flex-direction: column; */
     /* flex-wrap: wrap; */
     justify-content: space-evenly;
-    align-content: space-around;
+    /* align-content: space-around; */
     color: white;
 }
 
