Changed font size to make it more readable

--- a/src/components/FirstSection/FirstSection.css
+++ b/src/components/FirstSection/FirstSection.css
@@ -2,12 +2,14 @@
     color: white;
     display: flex;
     justify-content: center;
+    font-size: 250%;
 }
 
 .description {
     color: white;
     display: flex;
     justify-content: center;
+    font-size: 120%;
 }
 
 .column {
