--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,26 +1,31 @@
 .back_colour {
+    display: flex;
+    flex-direction: column;
     background-color: #3a4981;
+    align-items: center;
 }
 
-.six_pro {
+.profile_info {
     display: flex;
-    /* flex-direction: column; */
-    /* flex-wrap: wrap; */
-    justify-content: space-evenly;
-    /* align-content: space-around; */
+    flex-direction: column;
+    align-items: center;
+}
+
+.pro_1 {
+    display: flex;
+    flex-direction: row;
+}
+
+.pro_2 {
+    display: flex;
+    flex-direction: row;
+
+}
+.profile_pic {
+    height: 300px;
+    margin: 20px;
+}
+
+.nameStyle {
     color: white;
-}
-
-.pro1 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-
-}
-
-.pro2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-
 }
