Draft finished. The future plans are to fix the margins of each section, fix the looks of the buttons and add effects to carousel

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,9 @@
     margin: 10px;
 }
 
-/* .footButton {
-
-} */
+.footButton {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    width: 10%;
+}
